clusters/cdelashmutt-kind/cluster-config/config/api-portal/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kapp.k14s.io/delete-strategy: orphan
  name: api-portal
