clusters/cdelashmutt-kind/cluster-config/config/api-portal/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-portal-gateway
  namespace: api-portal
  annotations:
    kapp.k14s.io/change-group: gateway
    kapp.k14s.io/change-rule.0: "upsert after upserting pkgi"
    kapp.k14s.io/change-rule.1: "delete before deleting pkgi"
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "api-portal.kind.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-portal
  namespace: api-portal
  annotations:
    kapp.k14s.io/change-group: gateway
    kapp.k14s.io/change-rule.0: "upsert after upserting pkgi"
    kapp.k14s.io/change-rule.1: "delete before deleting pkgi"
spec:
  parentRefs:
  - name: api-portal-gateway
  hostnames: ["api-portal.kind.local"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: api-portal-server
      port: 8080
